--- a/testing/scenario_app/android/app/src/main/res/xml/extraction_config_11_and_below.xml
+++ b/testing/scenario_app/android/app/src/main/res/xml/extraction_config_11_and_below.xml
@@ -1,5 +1,8 @@
 <!-- Exclude all files from backup -->
 <full-backup-content>
-    <include domain=["file"] path="./non-existent-file.txt"/>
-    <exclude domain=["root"] path="./" />
+    <exclude domain="root" path="."/>
+    <exclude domain="file" path="."/>
+    <exclude domain="database" path="."/>
+    <exclude domain="sharedpref" path="."/>
+    <exclude domain="external" path="."/>
 </full-backup-content>
